--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8" />
     <title>tcdesign</title>
-    <meta name="tiffany.cameron" content="Home Design Ideas Focusing on: Paint Color, Rooms in the Home, and ">
+    <meta name="tiffany.cameron" content="Home Design Ideas Focusing on: Paint Color, Rooms in the Home, and Design Styles.">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto" rel="stylesheet">
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css"
         integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/27d66f0fd3.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <!-- NAVIGATION -->
@@ -40,12 +41,17 @@
                 <div class="nav-link">
                     <a href="PAGES/about.html" target="_blank">About</a>
                 </div>
-                <div class="nav-link">
+                <div class="nav-link dropdown">
                     <a href="PAGES/menu.html" target="_blank">Menu</a>
+                    <i class="fas fa-chevron-circle-down"></i>
+                    <div class="dropdown-content"> 
+                        <p><a>Room Colors</a></p>
+                        <p><a>Room Designs</a></p>
+                        <p><a>Room Styles</a></p>
+                    </div>
+
                 </div>
-                <div class="nav-link">
-                    <a href="PAGES/contact.html" target="_blank">Contact</a>
-                </div>
+               
             </div>
         </div>
         <div class="right-column">
