--- a/PAGES/RoomColors.html
+++ b/PAGES/RoomColors.html
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Condensed" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css"
         integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../PAGES/RoomColors.css">
     <script src="https://kit.fontawesome.com/27d66f0fd3.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -87,7 +87,7 @@
             
             </div>
             <div class="scroll-top-container">  
-                <img src="assets/scrollup.png">
+                <img src="../assets/scrollup.png">
             </div>
       
     </div>
