--- a/PAGES/home.html
+++ b/PAGES/home.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="../PAGES/menu.html">Menu</a>
+
+    <a href="../PAGES/home.html">Home</a>
+    
 </body>
 </html>
