updated room colors option

--- a/PAGES/RoomColors.html
+++ b/PAGES/RoomColors.html
@@ -15,8 +15,18 @@
         integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link rel="stylesheet" href="../PAGES/RoomColors.css">
     <script src="https://kit.fontawesome.com/27d66f0fd3.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
+
+    <!-- <SOCIAL MEDIA ICONS> -->
+        <div class="social-wrapper"></div>
+        <div class="fa">
+                <a href="#" class="fa fa-facebook"></a>
+                <a href="#" class="fa fa-twitter"></a>
+                <a href="#" class="fa fa-pinterest"></a>
+                <a href="#" class="fa fa-instagram"></a>
+            </div>
     <!-- NAVIGATION -->
     <div class="navigation-wrapper">
         <div class="left-column">
@@ -69,8 +79,10 @@
     </div>
     <!-- CONTENT -->
     <div class="homepage">
-        
-        
+        <!-- <img src="../assets/leaves.jpeg"></div> -->
+        <div class="right-heading">
+            <!-- <img src="=../assets/greenpalette.png"> -->
+        </div>
         <div class="mid-heading">
             <IMG src= "../assets/COLORS.png">
         </div>
