fixed image src

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
     <div class="column">
             <div class="columns-wrapper">
-                <img src="assets/rooms.png">
+                <img src="assets/Rooms.png">
             </div>      
     </div>
 
